# anarack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  index.html  juce-shim.js
.claude/: settings.json
.claude/commands/: cleanup-branches.md  commit-and-push.md  merge-main.md  pr.md  server.md  worktree.md
.claude/skills/interview/: SKILL.md
.claude/skills/plan/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: pages.yml
browser/: build.sh  deploy.sh  index.html  juce-shim.js
client/: anarack.py  index.html  native_client.py
docs/plans/: 20260330-implementation-ux-workflow-synth-definitions.md  20260330-ux-workflow-and-synth-definitions.md  20260401-2002-audio-streaming-reliability.md  20260402-1254-P2P NAT traversal with WireGuard — eliminate VPS relay latency.md  20260403-1514-three-mode-workflow.md  20260403-1559-revised-product-strategy.md  20260403-1602-adaptive-jitter-buffer.md  bidirectional-midi.md  embedded-wireguard.md  logic-au-plugin.md  production-audio-streaming.md  rev2-preview-engine.md
docs/strategy/: 00-overview.md  01-business-model.md  02-hardware.md  04-marketing.md  05-financials.md  07-prototype-setup.md
plan/: 00-overview.md  01-business-model.md  03-software.md  04-marketing.md  05-financials.md  06-timelines.md  07-prototype-setup.md
plugin/: CMakeLists.txt
plugin/src/: AudioRingBuffer.h  JitterBuffer.h  JitterEstimator.h  NetworkTransport.cpp  NetworkTransport.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SessionClient.cpp  SessionClient.h  WgTunnel.cpp  WgTunnel.h
plugin/ui/: index.html  rev2-panel.html
scripts/: dev.sh  setup-mac.sh  setup-pi.sh  start-all.sh
scripts/pi-setup/: anarack.service  setup.sh
server/: midi_router.py  pi_agent.py  requirements.txt  session_api.py  synth_manager.py  ws_relay.py
synths/: sequential-prophet-rev2.json
